<resources>
    <string name="app_name">Connection Code</string>

    //activity_register/login
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reg_button">Register</string>
    <string name="log_button">login</string>
    <string name="already">Already have an account?</string>
    <string name="back_to_register">Back to register...</string>
    <string name="select_photo">Select photo</string>


</resources>
