<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    tools:context=".RegisterActivity">


    <EditText
        android:id="@+id/username_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_imageview_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_imageview_register"
        app:layout_constraintTop_toBottomOf="@+id/selectphoto_imageview_register" />

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:background="@drawable/edittextstyle"
        android:hint="@string/email"
        android:paddingLeft="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_register"
        app:layout_constraintStart_toStartOf="@+id/username_register"
        app:layout_constraintTop_toBottomOf="@+id/username_register" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_register"
        app:layout_constraintStart_toStartOf="@+id/email_register"
        app:layout_constraintTop_toBottomOf="@+id/email_register" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/buttonstyles"
        android:text="@string/reg_button"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/already"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <Button
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_select_photo"
        android:text="@string/select_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectphoto_imageview_register"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_imageview_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_imageview_register"
        app:layout_constraintTop_toTopOf="@+id/selectphoto_imageview_register" />
</androidx.constraintlayout.widget.ConstraintLayout>